styles.css
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
    margin: 0;
    padding: 0;
    border: 0;
    font-size: 100%;
    font: inherit;
    vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
    display: block;
}
body {
    line-height: 1;
}
ol, ul {
    list-style: none;
}
blockquote, q {
    quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
    content: '';
    content: none;
}
table {
    border-collapse: collapse;
    border-spacing: 0;
}

ol li{
    list-style: none;
}

button {
    background: none;
    border: none;
    outline: none;
    box-shadow: none;
}

*{
    box-sizing: border-box;
}

a {
    all: unset;
}

.attribution { font-size: 11px; text-align: center; }
.attribution a { color: hsl(228, 45%, 44%); }

/* ------------------------------ End of CSS Reset / レセットの終わり ---------------------------- */ 

body{
    font-family: "Inter", sans-serif;
    background-color: var(--off-white);
}

body{
    margin: 5%; 
}

/* Classes, IDs & custom variables / クラスやアイディ*/ 

.display-none{
    display: none;
}
.display-block{
    display: block;
}

.flex-container{
    display: flex;
}

.grid-container{
    display: grid;
}

:root{
    --off-white: hsl(36, 100%, 99%);
    --grey-blue: hsl(233, 8%, 79%);
    --dark-grey-blue: hsl(236, 13%, 42%);
    --very-dark-blue: hsl(240, 100%, 5%);
    --soft-red: hsl(5, 85%, 63%);
    --soft-orange: hsl(35, 77%, 62%);
}

/* Nav styles */ 


/* Creates 3 lines for the hamburger menu toggle */
nav button{
    height: 2em;
    width: 2em;
    margin-bottom: .25em;   
    background-image: url("assets/images/icon-menu.svg");
    background-repeat: no-repeat;
    background-size: contain;
}

.close-menu{
    height: 2em;
    width: 2em;
    margin-bottom: .25em;  
    background-image: url("assets/images/icon-menu-close.svg");
    background-repeat: no-repeat;
    background-size: contain;
}

.main-image{
    max-height: 80vh;
    max-width: 90vw;
    /* margin-top: 3em; */
}

img[src="assets/images/logo.svg"]{
    max-height: 1.5em;
}
.main-navbar-flex-container{
    display: flex;
    justify-content: space-between;
    margin-bottom: 5%;
}

#hamburger-menu {
    position: absolute;
    float: right;
    background-color: white;
    width: 60vw;
    height: 100vh;
    padding: 20% 5% 0 5%;
}

#hamburger-menu li{
    padding: 10% 0%;
}

#hamburger-list-container{
    justify-content: flex-end;
}


/* Main styling */ 
h1{
    font-weight: 800;
    color: var(--very-dark-blue);
    font-size: 2em;
    margin: 5% 0;
}

main p{
    color: var(--dark-grey-blue);
    font-size: .75em;
    line-height: 1.5em;
}

main a{
    display: block;
    text-transform: uppercase;
    font-size: .7em;
    font-weight: 700;
    letter-spacing: .2em;
    text-decoration: none;
    text-align: center;
    background-color: var(--soft-red);
    width: 40vw;
    margin: 5% 0;
    padding: 5%;
    margin-bottom: 20%;
}

aside{
    background-color: var(--very-dark-blue);
    padding: 5%;
    margin-bottom: 20%;
}

aside h2{
    font-weight: 700;
    font-size: 1.2em;
    color: var(--soft-orange);
    margin-bottom: 10%;
}

aside h3{
    color: var(--off-white);
    font-size: .8em;
    font-weight: 700;
    margin-bottom: 5%;
}

aside p{
    color: var(--grey-blue);
}

hr{
    margin: 10% 0;
}

article img{
    width: 25vw;
    float: left;
    margin-right: 10%;

}

li article{
    clear: both;
    margin-bottom: 15%;
}

li article span{
    display: block;
    font-size: 1.5em;
    font-weight: 700;
    color: var(--soft-red);
    margin-bottom: 3%;
}

li article h3{
    color: var(--very-dark-blue);
    font-size: .8em;
    font-weight: 700;
    margin-bottom: 3%;
}
li article p{
    font-size: 4vw;
    color: var(--dark-grey-blue);
    line-height: 1.4em;
}   


/* Media Queries */ 
@media screen and (min-width: 720px) {
    #hamburger-menu{
        display: flex;
        background-color: none;
        padding: 0;
        height: min-content;
        width: min-content;
    }

    #hamburger-button{
        display: none;
    }

    #hamburger-menu li{
        padding: 0;
        padding-left: 10px;
    }
    
    nav{
        display: flex;
        justify-content: space-between;
        
    }

  }

